--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Corona Scan">
+  <meta property="og:description" content="코로나 입국금지, 여행 경보, 특별입국조치, 진단검사 대상 국가 조회 코로나스캔">
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+  <meta property="og:url" content="http://coronascan.co.kr">
+  <meta name="google-site-verification" content="google0fc809d07a0622bf.html">
+  <meta name="naver-site-verification" content="c5d9395a00782c13e6d31aacc925026208758d81" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
