--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -15,6 +16,7 @@
   <meta name="google-site-verification" content="google0fc809d07a0622bf.html">
   <meta name="naver-site-verification" content="c5d9395a00782c13e6d31aacc925026208758d81" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
