meta 태크 description UPDATE

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="코로나 입국금지, 입국제한, 외교부 특별여행주의보, 특별여행절차, 해외여행, 유럽발 입국자 코로나 진단검사" />
   <meta property="og:type" content="website">
   <meta property="og:title" content="Corona Scan">
   <meta property="og:description" content="코로나 입국금지, 여행 경보, 특별입국조치, 진단검사 대상 국가 조회 코로나스캔">
