--- a/front/public/index.html
+++ b/front/public/index.html
@@ -13,6 +13,7 @@
   <meta property="og:description" content="코로나 입국금지, 여행 경보, 특별입국조치, 진단검사 대상 국가 조회 코로나스캔">
   <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
   <meta property="og:url" content="http://coronascan.co.kr">
+  <meta name="naver-site-verification" content="c5d9395a00782c13e6d31aacc925026208758d81" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <!--
