[update] robots.txt

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -15,6 +15,7 @@
   <meta property="og:url" content="http://coronascan.co.kr">
   <meta name="naver-site-verification" content="c5d9395a00782c13e6d31aacc925026208758d81" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="naver-site-verification" content="1716531b55bf2a63aaacefb300d163aef3a1d946" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
